# PaneStreet

./: README.md  package-lock.json  package.json  vitest.config.mjs
.github/workflows/: copy-key.yml  release.yml
docs/: full-disk-access.md  index.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_reader.rs  dock_icon.rs  file_viewer.rs  lib.rs  pty_manager.rs  socket_server.rs  status_detector.rs  worktree_manager.rs
src/css/: main.css
src/js/: app.js  broadcast-to-claude.js  changelog-data.js  claude-pane-status.js  command-palette.js  companion-narrator.js  config-panels.js  diff-viewer.js  dock-icon.js  file-preview-utils.js  file-viewer.js  hook-utils.js  keybinding-conflicts.js  layout-focus-state.js  layout-snapshots.js  markdown.js  mascot-utils.js  notification-manager.js  notification-utils.js  redact-secrets.js  session-profiles.js  session-templates.js  session-utils.js  settings-io.js  sidebar-utils.js  smart-pane-name.js  status-utils.js  template-panel.js  template-share.js  terminal.js  timing-utils.js  tray-icon.js
src/js/__tests__/: broadcast-to-claude.test.js  changelog.test.js  claude-autostart.test.js  claude-pane-status.test.js  command-palette.test.js  companion-narrator.test.js  comprehensive.test.js  diff-viewer.test.js  dock-icon.test.js  file-viewer-preview.test.js  git-stash.test.js  hook-utils.test.js  keybinding-conflicts.test.js  (+21 more)
video/: package-lock.json  package.json
video/src/: PaneStreetDemo.tsx  Video.tsx  styles.ts
(+7 files in other folders)
