[package]
name = "pane-street"
version = "0.4.45"
edition = "2021"

[lib]
name = "pane_street_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
git2 = { version = "0.19", features = ["vendored-libgit2"] }
keyring = { version = "3", features = ["apple-native"] }
libc = "0.2"
base64 = "0.22"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }
tauri-plugin-window-state = "2.4.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
